--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
   
 
 body {
+  color: var(--basic-title-color);
   font-family: 'Roboto', sans-serif;
   background: #FFFFFF;
   letter-spacing: 0.03em;
@@ -28,16 +29,21 @@ body {
 /* Навигация */
 .navigator .nav-link {
   color: var(--basic-title-color);
-
+  text-decoration: none;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14px;
 }
 .navigator .nav-link:hover,
-.navigator .nav-link:focus {
+.navigator .nav-link:focus,
+.navigator .nav-link:active
+ {
   color: #2196f3;
 }
 /*Контакты*/
+.contact a{
+ text-decoration: none;
+}
 .contact .contact-link {
   color: var(--base-text-color);
 }
@@ -48,9 +54,9 @@ body {
 /*Герой*/
 /*.hero {
 }*/
-h1 > .hero {
+  h1 .hero {
   color: var(--accent-white-color);
-    letter-spacing: 0.06em; 
+  letter-spacing: 0.06em; 
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36px;
@@ -58,22 +64,22 @@ h1 > .hero {
 }
 
 .hero-button {
-  color: var(--accent-white-color);
-  font-family: inherit;
-  cursor: pointer; 
-  font-weight: 700;
+color: var(--accent-white-color);
+font-family: inherit;
+cursor: pointer; 
+font-weight: 700;
 font-size: 16px;
 line-height: 1.88px;
   }
 /* Проекты*/
 .project-title {
-  color:  var(--basic-title-color);
-  font-weight: 700;
+color:  var(--basic-title-color);
+font-weight: 700;
 font-size: 14px;
 line-height: 1.14px;
 }
 .project-text{
-  color: var(--base-text-color);
+color: var(--base-text-color);
 font-size: 14px; 
 line-height: 1.71px;
 }
@@ -86,7 +92,7 @@ line-height: 1.17px;
 }
 /*Команда*/
 h2 .command{
-  color: var(--basic-title-color);
+color: var(--basic-title-color);
 font-weight: 700; 
 font-size: 36px;
 line-height: 1.17px;
@@ -120,22 +126,22 @@ line-height: 1.71px;
 }
 /*Портфолио*/
  .portfolio-button{
-   color: var(--basic-title-color);
-  font-family: inherit; 
-  cursor: pointer;
-  font-weight: 500;
+color: var(--basic-title-color);
+font-family: inherit; 
+cursor: pointer;
+font-weight: 500;
 font-size: 16px;
 line-height: 1.63px;
 }
 .portfolio-project h2{
-  color: var(--basic-title-color);
+color: var(--basic-title-color);
 font-weight: 700;
 font-size: 18px;
 line-height: 2px;
 letter-spacing: 0.06em;
 }
 .portfolio-project p{
-  color: var(--base-text-color);
-  font-size: 16px;
+color: var(--base-text-color);
+font-size: 16px;
 line-height: 1.88px;
 }
