--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,15 @@
 :root {
---basic-title-color: color: #212121;
---base-text-color: color: #757575;
---accent-white-color: color: #FFFFFF;
+  --basic-title-color: #212121;
+  --base-text-color: #757575;
+  --white-color: #ffffff;
 }
-  
-
+/* Цвет фона основной но на нем невидно белые элементы
+background: #ffffff;*/
 body {
   color: var(--basic-title-color);
   font-family: 'Roboto', sans-serif;
-  background: #FFFFFF;
   letter-spacing: 0.03em;
-  
+  background: #e5e5e5;
 }
 
 /* Логотип*/
@@ -23,40 +22,38 @@ body {
   color: #2196f3;
 }
 
-.logo-white {
-  color: var(--accent-white-color);
-}
 /* Навигация */
-.navigator .nav-link {
+.navigator {
+  text-decoration: none;
+}
+.navigator .link {
   color: var(--basic-title-color);
   text-decoration: none;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14px;
 }
-.navigator .nav-link:hover,
-.navigator .nav-link:focus,
-.navigator .nav-link:active
- {
+.navigator .link:hover,
+.navigator .link:focus,
+.navigator .link:active {
   color: #2196f3;
 }
+
 /*Контакты*/
-.contact a{
- text-decoration: none;
-}
+
 .contact .contact-link {
   color: var(--base-text-color);
+  text-decoration: none;
 }
 .contact .contact-link:hover,
 .contact .contact-link:focus {
   color: #2196f3;
 }
 /*Герой*/
-/*.hero {
-}*/
-  h1 .hero {
-  color: var(--accent-white-color);
-  letter-spacing: 0.06em; 
+
+.hero-title {
+  color: var(--white-color);
+  letter-spacing: 0.06em;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36px;
@@ -64,84 +61,96 @@ body {
 }
 
 .hero-button {
-color: var(--accent-white-color);
-font-family: inherit;
-cursor: pointer; 
-font-weight: 700;
-font-size: 16px;
-line-height: 1.88px;
-  }
+  color: var(--white-color);
+  font-family: inherit;
+  cursor: pointer;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88px;
+}
+.hero-button.hero-button:hover,
+.hero-button.hero-button:focus {
+  color: #2196f3;
+}
 /* Проекты*/
 .project-title {
-color:  var(--basic-title-color);
-font-weight: 700;
-font-size: 14px;
-line-height: 1.14px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14px;
 }
-.project-text{
-color: var(--base-text-color);
-font-size: 14px; 
-line-height: 1.71px;
+.project-text {
+  color: var(--base-text-color);
+  font-size: 14px;
+  line-height: 1.71px;
 }
 /* Карточки проектов*/
-.project-cards-title{
-color: var(--basic-title-color);
-font-weight: 700; 
-font-size: 36px;
-line-height: 1.17px;
+.project-cards-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17px;
 }
 /*Команда*/
-h2 .command{
-color: var(--basic-title-color);
-font-weight: 700; 
-font-size: 36px;
-line-height: 1.17px;
+.command-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17px;
 }
 
-h3 .command{
-  color: var(--basic-title-color);
-  font-weight: 500; 
-font-size: 16px;
-line-height: 1.19px;
+.command-heading {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19px;
 }
-p  .command{
+.command-text {
   color: var(--base-text-color);
-  font-size: 16px; 
-line-height: 1.19px;
-
+  font-size: 16px;
+  line-height: 1.19px;
+}
+/*Footer*/
+.logo-footer {
+  color: var(--white-color);
+  font-family: 'Raleway', sans-serif;
+  text-decoration: none; /* убирает подчеркивание*/
 }
 /*Адрес*/
-.address {
+
+.address-map {
+  color: var(--white-color);
+  font-size: 14px;
+  line-height: 1.71px;
   text-decoration: none;
 }
-.address-map{
-  color: var(--accent-white-color);
-font-size: 14px; 
-line-height: 1.71px;
+.address-link {
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 14px;
+  line-height: 1.71px;
+  text-decoration: none;
 }
-.address-link{
-color: rgba(255, 255, 255, 0.6);
-font-size: 14px;
-line-height: 1.71px;
+.address-link.address-link:hover,
+.address-link.address-link:focus {
+  color: #2196f3;
 }
 /*Портфолио*/
- .portfolio-button{
-color: var(--basic-title-color);
-font-family: inherit; 
-cursor: pointer;
-font-weight: 500;
-font-size: 16px;
-line-height: 1.63px;
+.portfolio-button {
+  color: var(--basic-title-color);
+  font-family: inherit;
+  cursor: pointer;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.63px;
 }
-.portfolio-project h2{
-color: var(--basic-title-color);
-font-weight: 700;
-font-size: 18px;
-line-height: 2px;
-letter-spacing: 0.06em;
+.portfolio-button.portfolio-button:hover,
+.portfolio-button.portfolio-button:focus {
+  color: var(--white-color);
 }
-.portfolio-project p{
-color: var(--base-text-color);
-font-size: 16px;
-line-height: 1.88px;
+.portfolio-project-title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2px;
+  letter-spacing: 0.06em;
+}
+.portfolio-project-text {
+  color: var(--base-text-color);
+  font-size: 16px;
+  line-height: 1.88px;
 }
