--- a/css/styles.css
+++ b/css/styles.css
@@ -41,12 +41,12 @@ body {
 
 /*Контакты*/
 
-.contact .contact-link {
+.contact-link {
   color: var(--base-text-color);
   text-decoration: none;
 }
-.contact .contact-link:hover,
-.contact .contact-link:focus {
+.contact-link:hover,
+.contact-link:focus {
   color: #2196f3;
 }
 /*Герой*/
@@ -84,18 +84,13 @@ body {
   line-height: 1.71px;
 }
 /* Карточки проектов*/
-.project-cards-title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17px;
-}
-/*Команда*/
+.project-cards-title,
 .command-title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17px;
 }
-
+/*Команда*/
 .command-heading {
   font-weight: 500;
   font-size: 16px;
@@ -110,7 +105,7 @@ body {
 .logo-footer {
   color: var(--white-color);
   font-family: 'Raleway', sans-serif;
-  text-decoration: none; /* убирает подчеркивание*/
+  text-decoration: none;
 }
 /*Адрес*/
 
