--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,7 @@ body {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88px;
+  letter-spacing: 0.06em;
 }
 .hero-button.hero-button:hover,
 .hero-button.hero-button:focus {
