--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ body {
   text-decoration: none; 
   font-weight: 700;
   font-size: 26px;
-  line-height: 1.19px;
+  line-height: 1.19;
 }
 
 .logo-blue {
@@ -32,19 +32,24 @@ body {
   text-decoration: none;
   list-style: none;
 }
+
 .navigator-list .link,
 .contact-link {
   color: var(--basic-title-color);
   text-decoration: none;
   font-weight: 500;
   font-size: 14px;
-  line-height: 1.14px;
+  line-height: 1.14;
   letter-spacing: 0.02em;
-  
+ }
+.link.studio {
+  color: var(--blue-color);
 }
-
-.navigator-list .link:hover,
-.navigator-list .link:focus{
+.link.portfolio{
+  color: var(--blue-color);
+}
+.link:hover,
+.link:focus{
   color: var(--blue-color);
 }
 
@@ -54,19 +59,40 @@ body {
 }
 .contact-link {
   color: var(--base-text-color);
- 
-}
+ }
 .contact-link:hover,
 .contact-link:focus {
   color: var(--blue-color);
 }
+
 /*Герой*/
-
-
-/*.hero-button.hero-button:hover,
+.hero{
+    color: var(--white-color);
+  background: #2F303A;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+    
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+}
+.hero-button{
+  font-family: inherit;
+  color: var(--white-color);
+  background-color: var(--blue-color);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  cursor: pointer;
+  letter-spacing: 0.06em;
+  }
+.hero-button.hero-button:hover,
 .hero-button.hero-button:focus {
-  color: var(--blue-color);
-}*/
+  color: var(--basic-title-color);
+}
 /* Проекты*/
 .project-list{
   list-style: none;
@@ -74,13 +100,13 @@ body {
 .project-title {
   font-weight: 700;
   font-size: 14px;
-  line-height: 1.14px;
+  line-height: 1.14;
   text-transform: uppercase;
 }
 .project-text {
   color: var(--base-text-color);
   font-size: 14px;
-  line-height: 1.71px;
+  line-height: 1.71;
 }
 /* Карточки проектов*/
 
@@ -90,7 +116,7 @@ body {
 .project-cards-title {
   font-weight: 700;
   font-size: 36px;
-  line-height: 1.17px;
+  line-height: 1.17;
   text-align: center;
 } 
 
@@ -101,7 +127,7 @@ body {
 .command-title {
   font-weight: 700;
   font-size: 36px;
-  line-height: 1.17px;
+  line-height: 1.17;
   text-align: center;
 }
 .command-list{
@@ -110,13 +136,13 @@ body {
 .command-heading {
   font-weight: 500;
   font-size: 16px;
-  line-height: 1.19px;
+  line-height: 1.19;
   text-align: center;
 }
 .command-text {
   color: var(--base-text-color);
   font-size: 16px;
-  line-height: 1.19px;
+  line-height: 1.19;
   text-align: center;
 }
 /*Footer*/
@@ -135,12 +161,16 @@ body {
 .address-link {
   color: var(--white-color);
   font-size: 14px;
-  line-height: 1.71px;
+  line-height: 1.71;
   text-decoration: none;
 }
 
 .address-link {
   color: rgba(255, 255, 255, 0.6);
+}
+.address-link.address-link:hover,
+.address-link.address-link:focus{
+  color: var(--white-color);
 }
 /*Портфолио*/
 
@@ -157,7 +187,7 @@ body {
 .portfolio-button-list>.portfolio-button {
   color: var(--basic-title-color);
   background-color: #F5F4FA;
-  line-height: 1.63px;
+  line-height: 1.63;
  }
 .portfolio-button{
   font-family: inherit;
@@ -176,11 +206,11 @@ body {
 .portfolio-project-title {
   font-weight: 700;
   font-size: 18px;
-  line-height: 2px;
+  line-height: 2;
   letter-spacing: 0.06em;
 }
 .portfolio-project-text {
   color: var(--base-text-color);
   font-size: 16px;
-  line-height: 1.88px;
+  line-height: 1.88;
 }
