--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ body {
   color: var(--basic-title-color);
   font-family: 'Roboto', sans-serif;
   letter-spacing: 0.03em;
-  background: #ffffff;
+  background: var(--white-color);
 }
 
 /* Логотип*/
@@ -22,7 +22,6 @@ body {
   font-size: 26px;
   line-height: 1.19;
 }
-
 .logo-blue {
   color: var(--blue-color);
 }
@@ -32,7 +31,6 @@ body {
   text-decoration: none;
   list-style: none;
 }
-
 .navigator-list .link,
 .contact-link {
   color: var(--basic-title-color);
@@ -43,9 +41,6 @@ body {
   letter-spacing: 0.02em;
  }
 .link.studio {
-  color: var(--blue-color);
-}
-.link.portfolio{
   color: var(--blue-color);
 }
 .link:hover,
@@ -67,14 +62,11 @@ body {
 
 /*Герой*/
 .hero{
-    color: var(--white-color);
+  color: var(--white-color);
   background: #2F303A;
-  font-family: 'Roboto';
-  font-style: normal;
   font-weight: 900;
   font-size: 44px;
-  line-height: 1.36;
-    
+  line-height: 1.36;    
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
@@ -89,10 +81,11 @@ body {
   cursor: pointer;
   letter-spacing: 0.06em;
   }
-.hero-button.hero-button:hover,
-.hero-button.hero-button:focus {
+.hero-button:hover,
+.hero-button:hover{
   color: var(--basic-title-color);
 }
+
 /* Проекты*/
 .project-list{
   list-style: none;
@@ -108,17 +101,17 @@ body {
   font-size: 14px;
   line-height: 1.71;
 }
-/* Карточки проектов*/
 
-.project-cards-list{
-  list-style: none;
-  }
+/* Карточки проектов*/
 .project-cards-title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
-} 
+}
+.project-cards-list{
+  list-style: none;
+  }
 
 /*Команда*/
 .command {
@@ -145,14 +138,15 @@ body {
   line-height: 1.19;
   text-align: center;
 }
+
 /*Footer*/
 .footer {
   background-color: #2F303A;
 }
 .logo-footer {
   color: var(--white-color);
-  font-family: 'Raleway', sans-serif;
-  }
+}
+
 /*Адрес*/
 .footer-list{
   list-style: none;
@@ -164,42 +158,42 @@ body {
   line-height: 1.71;
   text-decoration: none;
 }
-
 .address-link {
   color: rgba(255, 255, 255, 0.6);
 }
-.address-link.address-link:hover,
-.address-link.address-link:focus{
+.address-link:hover,
+.address-link:focus{
   color: var(--white-color);
 }
-/*Портфолио*/
 
+/*Портфолио*/
+.link.portfolio {
+  color: var(--blue-color);
+}
+
+/* Кнопки в портфолио*/
 .portfolio-button-list{
   list-style: none; 
 }
-.portfolio-button-one {
-  color: var(--white-color);
-  background-color: var(--blue-color);
+.portfolio-button {
   font-family: inherit;
-  font-weight: 500;
-  font-size: 16px;
-}
-.portfolio-button-list>.portfolio-button {
   color: var(--basic-title-color);
   background-color: #F5F4FA;
-  line-height: 1.63;
- }
-.portfolio-button{
-  font-family: inherit;
   font-weight: 500;
   font-size: 16px;
+  line-height: 1.63;
   cursor: pointer;
- }
-
-.portfolio-button.portfolio-button:hover,
-.portfolio-button.portfolio-button:focus {
+}
+.portfolio-button.one {
+  color: var(--white-color);
+  background-color: var(--blue-color);
+  }
+.portfolio-button:hover,
+.portfolio-button:focus {
   color: var(--white-color);
 }
+
+/* Проекты портфолио*/
 .portfolio-project-list{
   list-style: none;
 }
